--- a/style.css
+++ b/style.css
@@ -6056,6 +6056,7 @@ button:disabled {
 .registro-professor {
   color: var(--color-text-secondary);
   font-size: 0.9rem;
+  width: 13rem;
 }
 
 .no-faltas,
@@ -6126,4 +6127,5 @@ button:disabled {
     padding: 16px;
   }
 }
+
 
